Bug 134601 - Missing font is not indicated using italics in font selector
Summary: Missing font is not indicated using italics in font selector
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0.2 target:7.1.0
Keywords: bibisected, bisected, regression
: 134762 (view as bug list)
Depends on:
Blocks: Fonts-Name-Combobox
  Show dependency treegraph
 
Reported: 2020-07-07 09:28 UTC by Mike Kaganski
Modified: 2020-07-13 13:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-07-07 09:28:34 UTC
1. Create a new Writer document in 7.0.0.1.
2. Click into Font Name box on the Formatting toolbar. Type some name absent on your system, like "AMissingFont", and press Enter

Expected result: the entered font name is displayed in italics.

Actual result: it is displayed without any indication of missing state.

Ref: https://design.blog.documentfoundation.org/2016/10/21/dealing-with-missing-fonts/

> Indication of Substitution
> 
> Presently, the only visual indication in the font name combobox that a font is
> being substituted is that the font name is italic.

So now there's no indication, even that insufficient one.

Worked fine with 6.4.4.2 => regression.
Comment 1 Roman Kuznetsov 2020-07-07 09:34:50 UTC
confirm in

Version: 7.1.0.0.alpha0+ Personal Edition
Build ID: 92c2318db92c3f102243ef1f8a9a492796932ff6
CPU threads: 4; OS: Mac OS X 10.15.5; UI render: default; VCL: osx
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Attila Baraksó (NISZ) 2020-07-09 18:30:09 UTC
Bibisected using bibisect-win64-7.0:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=2e0a32b51681fb356699b4a722f461f55a46b890
author: Caolán McNamara <caolanm@redhat.com>
committer: Caolán McNamara <caolanm@redhat.com>
summary: weld FontNameBox

Adding CC: Caolán McNamara
Comment 3 Caolán McNamara 2020-07-10 10:50:50 UTC
hmph, the gtk one does the right thing, but not the gen one
Comment 4 Commit Notification 2020-07-10 13:00:58 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/b66b80485d855767a78e688e9e989ca0b104e0d8

tdf#134601 set entry font as combobox control font to take effect

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-07-10 13:14:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41b5b34b439c451ac5dc4479eef6573a465eb00f

tdf#134601 set entry font as combobox control font to take effect

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Mike Kaganski 2020-07-12 20:54:04 UTC
*** Bug 134762 has been marked as a duplicate of this bug. ***
Comment 7 Attila Baraksó (NISZ) 2020-07-13 13:25:04 UTC
Verified in:

Version: 7.1.0.0.alpha0+ (x64)
Build ID: ffe503b62f9a508285ed06ef977f91604130579a
CPU szálak: 4; OS: Windows 10.0 Build 17134; Felületmegjelenítés: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

@Caolán: Thanks for fixing this issue!