tdf#134601 set entry font as combobox control font to take effect

Change-Id: I8cac0ebcd99fbfcd800074cc0d9acd924659753a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98494
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>